# flowpay

./: FREELY_BUILD_STATUS.md  REBUILD_ARCHITECTURE_PLAN.md  REBUILD_SUMMARY.md  REBUILD_TECH_STACK_DECISION.md
freely/: AGENTPAY_VISION.md  MOR_ARCHITECTURE.md  PLATFORM_ARCHITECTURE.md  PROJECT.md  README.md
freely/backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
freely/backend/freely/: __init__.py  api.py  app.py  config.py
freely/backend/freely/agent/: __init__.py  claude.py  service.py
freely/backend/freely/auth/: __init__.py  dependencies.py  endpoints.py  models.py  service.py
freely/backend/freely/cart/: __init__.py  endpoints.py  schemas.py  service.py
freely/backend/freely/chat/: __init__.py  endpoints.py  service.py
freely/backend/freely/checkout/: __init__.py  endpoints.py  schemas.py  service.py
freely/backend/freely/kit/: __init__.py  crypto.py
freely/backend/freely/kit/db/: __init__.py
freely/backend/freely/models/: __init__.py  analytics.py  base.py  cart.py  chat.py  invoice.py  order.py  organization.py  product.py  subscription.py  usage.py  user.py
freely/backend/freely/product/: __init__.py  endpoints.py  schemas.py  service.py
freely/backend/freely/webhooks/: __init__.py  endpoints.py
freely/backend/migrations/: env.py
freely/backend/migrations/versions/: 001_initial_schema.py  002_add_products_and_categories.py  003_add_cart_and_orders.py  004_add_mor_tables.py
freely/frontend/: nuxt.config.ts  package.json  tailwind.config.ts
freely/frontend/app/pages/: cart.vue  chat.vue  index.vue  login.vue  order-confirmation.vue  register.vue
freely/frontend/assets/styles/: globals.css
freely/frontend/composables/: useAuth.ts  useCart.ts  useChat.ts  useOrders.ts  useProducts.ts
freely/frontend/middleware/: auth.ts
(+4 files in other folders)
