[project]
name = "freely"
version = "1.0.0"
description = "Freely - Global commerce platform with AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Freely Team" }
]

dependencies = [
    # Core Framework
    "fastapi>=0.120.2",
    "uvicorn[standard]>=0.31.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.5.2",

    # Database
    "sqlalchemy[asyncio]>=2.0.34",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.5",
    "alembic>=1.9.2",
    "greenlet>=3.1.1",

    # Authentication & Security
    "pyjwt>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "cryptography>=43.0.1",
    "itsdangerous>=2.2.0",

    # Payments
    "stripe>=10.12.0,<12",

    # Background Jobs
    "dramatiq[redis]>=1.17.1",
    "apscheduler>=3.10.4",
    "redis>=5.0.4",

    # AI/LLM
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # Storage
    "boto3>=1.38.30",

    # Monitoring
    "sentry-sdk[fastapi,sqlalchemy]>=2.16.0",
    "structlog>=24.4.0",

    # Utilities
    "python-slugify>=8.0.1",
    "python-dateutil>=2.9.0",
    "httpx>=0.23.0",
    "email-validator>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0.0",
    "mypy>=1.11",
    "ruff>=0.6.9",
    "types-redis>=4.6.0",
    "fakeredis[lua]>=2.26.1",
    "freezegun>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
